[tool.poetry]
name = "foo-test-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "foo_test_project"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = { git = "https://github.com/requests/requests.git" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
